Fixed a bug with overflowing long names, fixes #1121

--- a/core/app/assets/stylesheets/tour/interests.css.less
+++ b/core/app/assets/stylesheets/tour/interests.css.less
@@ -102,6 +102,12 @@
   //the overall user-info block.
   position: absolute;
   top: -21px;
+
+  display: inline-block;
+  max-width: 185px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 
